--- a/index.html
+++ b/index.html
@@ -21,5 +21,7 @@
 			<input type="button" value="Start" id="start">
 			<input type="button" value="right" id="right" disabled>
 		</fieldset>
+
+		<textarea name="code" id="" cols="30" rows="10"></textarea>
 	</body>
 </html>
