--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 	<head>
+		<meta http-equiv='Content-Type' content='text/html; charset=utf-8'>
 		<title>Balance the poll!</title>
 		<link rel="stylesheet" href="styles/lib/bootstrap.min.css">
 		<link rel="stylesheet" href="styles/pole.css">
@@ -46,6 +47,19 @@
 
 // Trivial example:
 return 0;</textarea>
+		</div>
+		<div id="failModal" class="modal hide" tabindex="-1" role="dialog" aria-hidden="true">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+				<h3 id="myModalLabel">You are fail!</h3>
+			</div>
+			<div class="modal-body">
+				<h4>Your skill is not enough.</h4>
+				<p>You lasted <span id="failTime"></span> seconds.</p>
+			</div>
+			<div class="modal-footer">
+				<button class="btn btn-danger" data-dismiss="modal" aria-hidden="true">Close</button>
+			</div>
 		</div>
 		<script src="scripts/lib/jquery.js"></script>
 		<script src="scripts/lib/codemirror.js"></script>
