Fixed blazing star reference

--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@ return 0;</textarea>
 		<div id="failModal" class="modal hide" tabindex="-1" role="dialog" aria-hidden="true">
 			<div class="modal-header">
 				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-				<h3 id="myModalLabel">You are fail!</h3>
+				<h3 id="myModalLabel">You fail it!</h3>
 			</div>
 			<div class="modal-body">
-				<h4>Your skill is not enough.</h4>
+				<h4>Your skill is not enough, see you next time, bye-bye!</h4>
 				<p>You lasted <span id="failTime"></span> seconds.</p>
 			</div>
 			<div class="modal-footer">
