--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 	<head>
-		<meta http-equiv='Content-Type' content='text/html; charset=utf-8'>
+		<meta charset="utf-8"> 
 		<title>Balance the poll!</title>
 		<link rel="stylesheet" href="styles/lib/bootstrap.min.css">
 		<link rel="stylesheet" href="styles/pole.css">
